--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -36,10 +36,10 @@
             android:layout_width="match_parent"
             android:layout_height="6dp"
             android:background="@drawable/shape_gradient_top"
-            app:layout_anchor="@+id/post_list_bottom_sheet" />
+            app:layout_anchor="@+id/bottom_sheet" />
 
         <android.support.design.card.MaterialCardView
-            android:id="@+id/post_list_bottom_sheet"
+            android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:behavior_hideable="false"
@@ -59,6 +59,7 @@
                     android:layout_height="20dp" />
 
                 <android.support.design.widget.TabLayout
+                    android:id="@+id/post_list_tab_layout"
                     android:scrollbars="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -66,30 +67,6 @@
                     app:tabTextColor="@color/accent"
                     app:tabMode="scrollable">
 
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="HOT" />
-
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="NEW" />
-
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="TOP" />
-
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="RISING" />
-
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="COMMENTS" />
                 </android.support.design.widget.TabLayout>
 
                 <ListView
