--- a/app/src/main/res/menu/menu_post_list.xml
+++ b/app/src/main/res/menu/menu_post_list.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_post_list_log_in"
-        android:title="Log In"
+        android:title="@string/log_in"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_post_list_log_out"
-        android:title="Log Out"
+        android:title="@string/log_out"
         app:showAsAction="never" />
 </menu>
