--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -99,7 +99,7 @@
                 android:paddingBottom="8dp"
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp"
-                android:paddingTop="4dp"
+                android:paddingTop="2dp"
                 android:textColor="@android:color/black"
                 android:visibility="@{viewModel.isCommentBodyVisible(comment) ? View.VISIBLE : View.GONE}"
                 app:html="@{viewModel.getCommentBody(comment)}"
@@ -112,7 +112,6 @@
                 android:background="@color/secondary_background_gray"
                 android:clickable="false"
                 android:orientation="horizontal"
-                android:paddingStart="8dp"
                 android:visibility="@{viewModel.isCommentBottomLineVisible(commentIndex) ? View.VISIBLE : View.GONE}">
 
                 <android.support.v4.widget.Space
@@ -173,7 +172,8 @@
                     android:focusable="true"
                     android:gravity="start|center_vertical"
                     android:onClick="@{() -> viewModel.onCommentMoreClicked(comment, commentIndex)}"
-                    android:paddingStart="16dp"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
                     android:text="@string/item_comment_more"
                     android:textColor="@color/accent" />
             </LinearLayout>
