--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -24,7 +24,7 @@
             app:refreshing="@{postListViewModel.isRefreshing()}">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/post_list_recycler_view"
+                android:id="@+id/post_list_post_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical"
@@ -69,10 +69,13 @@
 
                 </android.support.design.widget.TabLayout>
 
-                <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:entries="@android:array/emailAddressTypes" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/post_list_subreddit_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </android.support.v7.widget.RecyclerView>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
