--- a/app/src/main/res/layout/grippy_dots.xml
+++ b/app/src/main/res/layout/grippy_dots.xml
@@ -1,8 +1,8 @@
 <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="25dp"
-    android:layout_gravity="center_horizontal"
+    android:layout_height="24dp"
+    android:layout_gravity="center"
     app:columnCount="3"
     app:rowCount="3">
 
@@ -27,19 +27,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="-6.5dp"
-        android:layout_marginTop="-18dp"
+        android:layout_marginTop="-19dp"
         android:src="@drawable/dots_horizontal" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-18dp"
+        android:layout_marginTop="-19dp"
         android:layout_marginEnd="-6.5dp"
         android:src="@drawable/dots_horizontal" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-18dp"
+        android:layout_marginTop="-19dp"
         android:src="@drawable/dots_horizontal" />
 </android.support.v7.widget.GridLayout>
