--- a/app/src/main/res/layout/item_subreddit.xml
+++ b/app/src/main/res/layout/item_subreddit.xml
@@ -5,6 +5,10 @@
     <data>
 
         <variable
+            name="postListViewModel"
+            type="com.jollyremedy.notreddit.ui.postlist.PostListViewModel" />
+
+        <variable
             name="subreddit"
             type="com.jollyremedy.notreddit.models.subreddit.Subreddit" />
     </data>
@@ -15,6 +19,7 @@
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
+        android:onClick="@{() -> postListViewModel.onSubredditClicked(subreddit)}"
         android:orientation="vertical">
 
         <TextView
