--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -11,67 +11,62 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/post_list_swipe_refresh_layout"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/bottom_sheet_height"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:onRefreshListener="@{() -> postListViewModel.onRefresh()}"
-            app:refreshing="@{postListViewModel.isRefreshing()}">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/post_list_post_recycler_view"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-        <View
-            android:id="@+id/shadow"
-            android:layout_width="match_parent"
-            android:layout_height="6dp"
-            android:background="@drawable/shape_gradient_top"
-            app:layout_anchor="@+id/bottom_sheet" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/bottom_sheet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:behavior_hideable="false"
-            app:behavior_peekHeight="@dimen/bottom_sheet_height"
-            app:layout_behavior="@string/bottom_sheet_behavior">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <include layout="@layout/grippy_dots" />
+                android:layout_height="wrap_content">
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/post_list_tab_layout"
                     android:layout_width="match_parent"
+                    android:layout_height="60dp"
                     android:layout_marginTop="-4dp"
-                    android:layout_height="50dp"
                     android:scrollbars="horizontal"
                     app:tabMinWidth="95dp"
                     app:tabMode="scrollable"
-                    app:tabTextColor="@color/accent">
+                    app:tabTextColor="@color/accent" />
 
-                </android.support.design.widget.TabLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/post_list_swipe_refresh_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:onRefreshListener="@{() -> postListViewModel.onRefresh()}"
+                app:refreshing="@{postListViewModel.isRefreshing()}">
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/post_list_subreddit_recycler_view"
+                    android:id="@+id/post_list_post_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="vertical" />
+                    android:scrollbars="vertical"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+            </android.support.v4.widget.SwipeRefreshLayout>
+        </LinearLayout>
 
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+        <FrameLayout
+            android:layout_margin="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_gravity="bottom|end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/animation"
+                app:borderWidth="0dp" />
+        </FrameLayout>
+
     </android.support.design.widget.CoordinatorLayout>
 </layout>
