--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -50,23 +50,16 @@
             </android.support.v4.widget.SwipeRefreshLayout>
         </LinearLayout>
 
-        <FrameLayout
-            android:layout_margin="4dp"
-            android:clickable="true"
-            android:focusable="true"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_gravity="bottom|end"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/animation"
-                app:borderWidth="0dp" />
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/animation"
+            app:borderWidth="0dp" />
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
