--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -54,29 +54,22 @@
             android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:behavior_hideable="true"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior="@string/bottom_sheet_behavior">
+            app:layout_behavior="com.jollyremedy.notreddit.ui.common.UserLockBottomSheetBehavior">
 
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/post_list_subreddit_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:scrollbars="vertical" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/post_list_subreddit_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="vertical" />
-
-            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
-            android:layout_gravity="bottom|end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:clickable="true"
             android:focusable="true"
