--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -57,11 +57,17 @@
             app:behavior_peekHeight="0dp"
             app:layout_behavior="com.jollyremedy.notreddit.ui.common.UserLockBottomSheetBehavior">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/post_list_subreddit_recycler_view"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical" />
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/post_list_subreddit_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="vertical" />
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
