--- a/app/src/main/res/layout/partial_subreddit_header.xml
+++ b/app/src/main/res/layout/partial_subreddit_header.xml
@@ -9,7 +9,6 @@
         android:orientation="horizontal">
 
         <EditText
-            android:autoText="false"
             android:id="@+id/subreddit_goto_edittext"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -22,6 +21,7 @@
             android:singleLine="true" />
 
         <ImageButton
+            android:id="@+id/subreddit_goto_icon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
