--- a/app/src/main/res/layout/partial_post_header.xml
+++ b/app/src/main/res/layout/partial_post_header.xml
@@ -21,7 +21,7 @@
             android:id="@+id/post_detail_post_item"
             layout="@layout/item_post" />
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
@@ -42,7 +42,7 @@
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </layout>
