--- a/app/src/main/res/layout/grippy_dots.xml
+++ b/app/src/main/res/layout/grippy_dots.xml
@@ -1,4 +1,4 @@
-<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="24dp"
@@ -42,4 +42,4 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-19dp"
         android:src="@drawable/dots_horizontal" />
-</android.support.v7.widget.GridLayout>
+</androidx.gridlayout.widget.GridLayout>
