--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -110,7 +110,7 @@
                 android:orientation="horizontal"
                 android:visibility="@{viewModel.isCommentBottomLineVisible(comment) ? View.VISIBLE : View.GONE}">
 
-                <android.support.v4.widget.Space
+                <androidx.v4.widget.Space
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
